--- a/.github/workflows/BuildAndTest.yaml
+++ b/.github/workflows/BuildAndTest.yaml
@@ -13,7 +13,7 @@ env:
   ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER: true
 jobs:
   build-and-test:
-    runs-on: [self-hosted, linux, normal]
+    runs-on: [ubuntu-latest]
     # Action to use Dockerfile Setup fron runtimeverification/devops-actions
     container: ubuntu:jammy
   
@@ -24,6 +24,16 @@ jobs:
           # Check out pull request HEAD instead of merge commit.
           ref: ${{ github.event.pull_request.head.sha }}
           submodules: recursive
+    
+      - name: 'Install Nix'
+        if: ${{ !startsWith(matrix.os, 'self') }}
+        uses: cachix/install-nix-action@v15
+        with:
+          # Keep nix at <=2.7 https://github.com/NixOS/nix/issues/6572
+          install_url: https://releases.nixos.org/nix/nix-2.7.0/install
+          extra_nix_config: |
+            substituters = http://cache.nixos.org https://cache.iog.io
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
 
       - name: Install cachix
         uses: cachix/cachix-action@v10
