--- a/.github/workflows/BuildAndTest.yaml
+++ b/.github/workflows/BuildAndTest.yaml
@@ -13,10 +13,8 @@ env:
   ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER: true
 jobs:
   build-and-test:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     # Action to use Dockerfile Setup fron runtimeverification/devops-actions
-    container: ubuntu:jammy
-  
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -26,8 +24,7 @@ jobs:
           submodules: recursive
     
       - name: 'Install Nix'
-        if: ${{ !startsWith(matrix.os, 'self') }}
-        uses: cachix/install-nix-action@v15
+        uses: cachix/install-nix-action@v18
         with:
           # Keep nix at <=2.7 https://github.com/NixOS/nix/issues/6572
           install_url: https://releases.nixos.org/nix/nix-2.7.0/install
