--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,16 +1,14 @@
-name: 'Build And Test in Container'
+name: 'Build and Test PR'
 
-on: 
-  workflow_dispatch:
+on:
   pull_request:
     branches:
       - master
 concurrency:
-  # Latest code is always prioritized to run per workflow per branch. 
+  # Latest code is always prioritized to run per workflow per branch.
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
   cancel-in-progress: true
-env: 
-  ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER: true
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -22,7 +20,7 @@ jobs:
           # Check out pull request HEAD instead of merge commit.
           ref: ${{ github.event.pull_request.head.sha }}
           submodules: recursive
-    
+
       - name: 'Install Nix'
         uses: cachix/install-nix-action@v18
         with:
@@ -36,12 +34,12 @@ jobs:
         uses: cachix/cachix-action@v10
         with:
           name: runtimeverification
-          signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'        
+          signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
 
       - name: Build
-        run: | 
+        run: |
           echo "Nix build"
-      
+
       - name: Test
         run: |
           echo "Nix Test"
