--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -12,34 +12,12 @@ concurrency:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    # Action to use Dockerfile Setup fron runtimeverification/devops-actions
     steps:
-      - name: Check out code
+      - name: 'Check out code'
         uses: actions/checkout@v3
-        with:
-          # Check out pull request HEAD instead of merge commit.
-          ref: ${{ github.event.pull_request.head.sha }}
-          submodules: recursive
-
-      - name: 'Install Nix'
-        uses: cachix/install-nix-action@v18
-        with:
-          # Keep nix at <=2.7 https://github.com/NixOS/nix/issues/6572
-          install_url: https://releases.nixos.org/nix/nix-2.7.0/install
-          extra_nix_config: |
-            substituters = http://cache.nixos.org https://cache.iog.io
-            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
-
-      - name: Install cachix
-        uses: cachix/cachix-action@v10
-        with:
-          name: runtimeverification
-          signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-
-      - name: Build
+      - name: 'Install Poetry'
         run: |
-          echo "Nix build"
-
-      - name: Test
-        run: |
-          echo "Nix Test"
+          curl -sSL https://install.python-poetry.org | POETRY_HOME=/usr python3 -
+          poetry --version
+      - name: 'Formatting and Type Checking'
+        run: make -j4
