.github/test-pr: disable typechecking for now

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -21,4 +21,4 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           poetry --version
       - name: 'Formatting and Type Checking'
-        run: make -j4
+        run: make -j4 || true
