--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,14 @@ authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
 ]
 
+[tool.poetry.scripts]
+kup = "kup.__main__:main"
+
 [tool.poetry.dependencies]
 python = "^3.8"
+terminaltables = "^3.1.10"
+requests = "^2.28.1"
+types-requests = "^2.28.11"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
