--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,22 @@ authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
 ]
 
+[tool.poetry.scripts]
+kup = "kup.__main__:main"
+
 [tool.poetry.dependencies]
 python = "^3.8"
 terminaltables = "^3.1.10"
 requests = "^2.28.1"
 types-requests = "^2.28.11"
 
-[tool.poetry.scripts]
-kup = "kup.__main__:main"
-
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 autoflake = "*"
 black = "*"
 flake8 = "*"
 flake8-bugbear = "*"
 flake8-comprehensions = "*"
+flake8-quotes = "*"
 isort = "*"
 mypy = "*"
 pep8-naming = "*"
