.github/test-pr: test that kup list works on CI

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -22,3 +22,5 @@ jobs:
           poetry --version
       - name: 'Formatting and Type Checking'
         run: make
+      - name: 'Kup list works'
+        run: poetry run kup list
