--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python = "^3.8"
 terminaltables = "^3.1.10"
 requests = "^2.28.1"
 types-requests = "^2.28.11"
+pptree = "^3.1"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
@@ -48,3 +49,4 @@ skip-string-normalization = true
 
 [tool.mypy]
 disallow_untyped_defs = true
+ignore_missing_imports = true
