--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -28,6 +28,9 @@ jobs:
         with:
           name: runtimeverification
           signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9' 
       - name: 'Install Poetry'
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
