--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,11 @@ authors = [
 kup = "kup.__main__:main"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 terminaltables = "^3.1.10"
 requests = "^2.28.1"
 types-requests = "^2.28.11"
+pptree = "^3.1"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
@@ -48,3 +49,4 @@ skip-string-normalization = true
 
 [tool.mypy]
 disallow_untyped_defs = true
+ignore_missing_imports = true
