skip cachix push

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           name: runtimeverification
           signingKey: '${{ secrets.RV_DEVOPS_CACHIX_TOKEN }}'
+          skipPush: true
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9' 
