--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -26,7 +26,7 @@ jobs:
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
       - uses: cachix/cachix-action@v10
         with:
-          name: runtimeverification
+          name: k-framework
           signingKey: '${{ secrets.RV_DEVOPS_CACHIX_TOKEN }}'
           skipPush: true
       - uses: actions/setup-python@v4
