--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ python = "^3.9"
 terminaltables = "^3.1.10"
 requests = "^2.28.1"
 types-requests = "^2.28.11"
-pptree = "^3.1"
+rich = "^12.6.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
