--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: cachix/cachix-action@v10
         with:
           name: k-framework
-          signingKey: '${{ secrets.RV_DEVOPS_CACHIX_TOKEN }}'
+          signingKey: '${{ secrets.CACHIX_PUBLIC_TOKEN }}'
           skipPush: true
       - uses: actions/setup-python@v4
         with:
