--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ terminaltables = "^3.1.10"
 requests = "^2.28.1"
 types-requests = "^2.28.11"
 rich = "^12.6.0"
+pyxdg = "^0.28"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
