--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requests = "^2.28.1"
 types-requests = "^2.28.11"
 rich = "^12.6.0"
 pyxdg = "^0.28"
+tinynetrc = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
