--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -30,6 +30,8 @@ jobs:
         uses: cachix/install-nix-action@v19
         with:
           install_url: https://releases.nixos.org/nix/nix-2.13.3/install
+          extra_nix_config:
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
       - if: ${{ !startsWith(matrix.os, 'self') }}
         uses: cachix/cachix-action@v12
