--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "kup"
-version = "0.1.0"
+version = "0.2.0"
 description = "kup is a tool for managing installations of the K framework along with the different available semantics"
 authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
@@ -21,6 +21,7 @@ types-requests = "^2.28.11"
 rich = "^12.6.0"
 pyxdg = "^0.28"
 tinynetrc = "^1.3.1"
+git-url-parse = "^1.2.2"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
