--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ rich = "^12.6.0"
 pyxdg = "^0.28"
 tinynetrc = "^1.3.1"
 git-url-parse = "^1.2.2"
+tomli = "^2.4.0"
+tomli-w = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
