--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -23,8 +23,18 @@ jobs:
         run: |
           git config user.name devops
           git config user.email devops@runtimeverification.com
-      - name: 'Install Poetry'
-        uses: Gr1N/setup-poetry@v9
+      - name: 'Install Python'
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.10'
+      - name: 'Get uv release'
+        id: uv_release
+        run: |
+          echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
+      - name: 'Install uv'
+        uses: astral-sh/setup-uv@v7
+        with:
+          version: ${{ steps.uv_release.outputs.uv_version }}
       - name: 'Install Nix'
         uses: cachix/install-nix-action@v31.7.0
         with:
@@ -32,10 +42,10 @@ jobs:
           extra_nix_config: |
             substituters = http://cache.nixos.org https://hydra.iohk.io
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
-      - name: 'Update Poetry files'
+      - name: 'Update uv files'
         run: |
-          poetry update
-          git add . && git commit -m "Sync Poetry files" || true
+          uv lock --upgrade
+          git add uv.lock && git commit -m "Sync uv lock file" || true
       - name: 'Update Nix flake inputs'
         run: |
           RV_NIX_TOOLS_VERSION=$(cat deps/rv-nix-tools)
