--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,51 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[project]
 name = "kup"
-version = "0.2.4"
+version = "0.2.5"
 description = "kup is a tool for managing installations of the K framework along with the different available semantics"
-authors = [
-    "Runtime Verification, Inc. <contact@runtimeverification.com>",
+readme = "README.md"
+requires-python = ">=3.10,<4"
+dependencies = [
+    "git-url-parse>=1.2.2,<2",
+    "pyxdg>=0.28",
+    "requests>=2.28.1,<3",
+    "rich>=12.6.0,<13",
+    "terminaltables>=3.1.10,<4",
+    "tinynetrc>=1.3.1,<2",
 ]
 
-[tool.poetry.scripts]
+[[project.authors]]
+name = "Runtime Verification, Inc."
+email = "contact@runtimeverification.com"
+
+[project.scripts]
 kup = "kup.__main__:main"
 
-[tool.poetry.dependencies]
-python = "^3.11"
-terminaltables = "^3.1.10"
-requests = "^2.28.1"
-types-requests = "^2.28.11"
-rich = "^12.6.0"
-pyxdg = "^0.28"
-tinynetrc = "^1.3.1"
-git-url-parse = "^1.2.2"
+[dependency-groups]
+dev = [
+    "autoflake",
+    "black",
+    "flake8",
+    "flake8-bugbear",
+    "flake8-comprehensions",
+    "flake8-quotes",
+    "flake8-type-checking",
+    "isort",
+    "mypy",
+    "pep8-naming",
+    "pytest",
+    "pytest-cov",
+    "pytest-mock",
+    "pytest-xdist",
+    "pyupgrade",
+    "types-requests>=2.28.11,<3",
+]
 
-[tool.poetry.group.dev.dependencies]
-autoflake = "*"
-black = "*"
-flake8 = "*"
-flake8-bugbear = "*"
-flake8-comprehensions = "*"
-flake8-quotes = "*"
-isort = "*"
-mypy = "*"
-pep8-naming = "*"
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.isort]
 profile = "black"
