--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "kup"
-version = "0.2.5"
+version = "0.2.6"
 description = "kup is a tool for managing installations of the K framework along with the different available semantics"
 readme = "README.md"
 requires-python = ">=3.10,<4"
@@ -15,6 +15,8 @@ dependencies = [
     "rich>=12.6.0,<13",
     "terminaltables>=3.1.10,<4",
     "tinynetrc>=1.3.1,<2",
+    "tomli>=2.4.0",
+    "tomli-w>=1.2.0",
 ]
 
 [[project.authors]]
